# onevox

./: .envrc  .gitignore  ACCESSIBILITY.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHEATSHEET.md  COMMANDS.md  CONTRIBUTING.md  CRITICAL_FIXES_ROUND2_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  DEVELOPMENT.md  INSTALLATION.md  LICENSE  MIGRATION_GUIDE.md  ONNX_SETUP.md  PATHS_MIGRATION_COMPLETE.md  PATH_MIGRATION_FIX_SUMMARY.md  PROGRESS.md  QUICKREF.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  TUI_PRODUCTION_IMPROVEMENTS.md  TUI_PRODUCTION_READY.md  TUI_SETUP_COMPLETE.md  TUI_THEME_SYSTEM.md  WAYLAND.md  build.rs  build.sh  config.example.toml  context.md  install.sh  test_tokens.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: benchmark.yml  ci.yml  release.yml
benches/: audio_processing.rs  pipeline_e2e.rs  vad_processing.rs
docs/: ARCHITECTURE.md  DEPENDENCIES.md  INITIALIZATION.md  PERFORMANCE.md  PLAN.md  TUI.md  TUI_INTEGRATION.md  WHISPER_INTEGRATION.md  index.html
examples/: debug_decoder.rs  test_real_audio.rs  test_whisper_cli.rs
packaging/linux/: onevox.service
packaging/macos/: Info.plist
scripts/: check_permissions.sh  grant_permissions_helper.sh  install_linux.sh  install_macos.sh  migrate_legacy_paths.sh  package_macos_app.sh  release.sh  run-daemon.sh  run-tui.sh  setup_permissions.sh  setup_whisper_cli.sh  uninstall_linux.sh  uninstall_macos.sh
src/: audio.rs  config.rs  daemon.rs  health.rs  history.rs  indicator.rs  ipc.rs  lib.rs  main.rs  models.rs  platform.rs  tui.rs  vad.rs
src/audio/: buffer.rs  capture.rs  devices.rs
src/daemon/: dictation.rs  lifecycle.rs  state.rs
src/ipc/: client.rs  protocol.rs  server.rs
src/models/: downloader.rs  mock.rs  onnx_runtime.rs  registry.rs  runtime.rs  tokenizer.rs  whisper_candle.rs  whisper_cpp.rs  whisper_cpp_cli.rs  whisper_onnx.rs
src/platform/: hotkey.rs  injector.rs  paths.rs  permissions.rs
src/vad/: detector.rs  energy.rs  processor.rs
tests/: history_integration_test.rs  test_onnx_inference.rs  test_windows_ipc.rs
tui/: README.md  TEST_CHECKLIST.md  package.json  tsconfig.json
tui/src/: app.ts  index.ts  theme.ts
tui/src/components/: card.ts  confirm-popup.ts  key-capture.ts  select-field.ts  stepper.ts  toggle.ts
tui/src/data/: cli.ts  config.ts  history.ts
tui/src/panels/: config.ts  help.ts  history.ts
