[package]
name = "vox"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Ultra-fast, privacy-first local speech-to-text daemon"
license = "MIT"
repository = "https://github.com/yourusername/vox"
keywords = ["speech-to-text", "whisper", "dictation", "accessibility", "daemon"]
categories = ["accessibility", "multimedia::audio", "command-line-utilities"]

[lib]
name = "vox"
path = "src/lib.rs"

[[bin]]
name = "vox"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Audio processing
cpal = "0.15"
hound = "3.5"
rubato = "0.14"
ringbuf = "0.3"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# CLI and utilities
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# IPC
interprocess = "1.2"

# File watching for config hot-reload
notify = "6.1"

# System info
sysinfo = "0.30"

[features]
default = ["whisper-cpp", "silero-vad", "tui"]

# Model backends
whisper-cpp = []
faster-whisper = ["pyo3", "pyo3-asyncio"]
onnx = ["ort"]
candle = ["candle-core", "candle-nn", "candle-transformers"]

# VAD backends
silero-vad = ["ort"]
webrtc-vad = []

# Features
tui = ["ratatui", "crossterm"]
gpu = []

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
x11-clipboard = "0.8"
evdev = "0.12"

# Optional dependencies (enabled by features)
[dependencies.pyo3]
version = "0.20"
optional = true

[dependencies.pyo3-asyncio]
version = "0.20"
optional = true

[dependencies.ort]
version = "2.0.0-rc.11"
optional = true

[dependencies.candle-core]
version = "0.3"
optional = true

[dependencies.candle-nn]
version = "0.3"
optional = true

[dependencies.candle-transformers]
version = "0.3"
optional = true

[dependencies.ratatui]
version = "0.25"
optional = true

[dependencies.crossterm]
version = "0.27"
optional = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
