[package]
name = "onevox"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Ultra-fast, privacy-first local speech-to-text daemon"
license = "MIT"
repository = "https://github.com/yourusername/onevox"
keywords = ["speech-to-text", "whisper", "dictation", "accessibility", "daemon"]
categories = ["accessibility", "multimedia::audio", "command-line-utilities"]
rust-version = "1.93"

[lib]
name = "onevox"
path = "src/lib.rs"

[[bin]]
name = "onevox"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Audio processing
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
ringbuf = "0.4"
dasp = "0.11"
rustfft = "6.2"  # Fast FFT for mel spectrogram computation

# Utilities
tempfile = "3.8"  # Temporary files for whisper-cli integration

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# CLI and utilities
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
indicatif = "0.17"  # Progress bars for downloads

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# IPC
interprocess = "2.2"

# File watching for config hot-reload
notify = "7.0"

# System info
sysinfo = "0.33"

# Platform integration
handy-keys = "0.2.1"  # Cross-platform global keyboard shortcuts
enigo = "0.6"  # Keyboard/mouse simulation for text injection

[features]
default = ["overlay-indicator"]  # Enable desktop recording overlay by default

# Model backends
faster-whisper = ["pyo3", "pyo3-asyncio"]
onnx = ["ort", "ndarray"]
candle = ["candle-core", "candle-nn", "candle-transformers"]

# VAD backends
silero-vad = ["ort"]
webrtc-vad = []

# Features
tui = ["ratatui", "crossterm"]
gpu = []
overlay-indicator = ["eframe", "winit"]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
x11-clipboard = "0.8"
evdev = "0.12"

# Optional dependencies (enabled by features)
[dependencies.pyo3]
version = "0.20"
optional = true

[dependencies.pyo3-asyncio]
version = "0.20"
optional = true
features = ["tokio-runtime"]

[dependencies.ort]
version = "2.0.0-rc.11"
optional = true
features = ["load-dynamic", "download-binaries"]

[dependencies.ndarray]
version = "0.17"
optional = true

[dependencies.tokenizers]
version = "0.20"
optional = true

[dependencies.candle-core]
version = "0.8"
optional = true

[dependencies.candle-nn]
version = "0.8"
optional = true

[dependencies.candle-transformers]
version = "0.8"
optional = true

[dependencies.ratatui]
version = "0.29"
optional = true

[dependencies.crossterm]
version = "0.28"
optional = true

[dependencies.eframe]
version = "0.31"
optional = true

[dependencies.winit]
version = "0.30"
optional = true

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
